@@ -37,18 +37,27 @@ LIB_LIB =
 #TARGETS ?= $(OBJS)
 endif
 
-.PHONY : all install clean clean-intermediate
+.PHONY : all install clean clean-intermediate $(addprefix install,$(TARGETS))
+
+ifndef SILENT
+ECHO=echo
+else
+ECHO=true
+endif
 
 all : install
 
 ifneq (,$(strip $(TARGETS)))
+
+$(addprefix install,$(TARGETS)): install% : %
+	@-if [ -e "$<" ]; then \
+	[ -d "$(top_builddir)/$(installdir)" ] || $(MKDIR) "$(top_builddir)/$(installdir)"; \
+	$(ECHO) "[INSTALL] $(patsubst $(top_builddir)/$(builddir)/%,%,$<)"; \
+	[ ! -e "$<" ] || $(CP) "$<" "$(top_builddir)/$(installdir)"; \
+	fi
+
 # usually install $(LIB_LIB) or $(OBJS), race condition in "[ -d x ] || mkdir x"
-install : recurse $(OBJS) $(LIB_LIB)
-	@$(MKDIR) "$(top_builddir)/$(installdir)"
-ifndef SILENT
-	@-echo "[INSTALL] $(patsubst $(top_builddir)/$(builddir)/%,%,$(TARGETS))";
-endif
-	$(Q)-$(CP) $(TARGETS) "$(top_builddir)/$(installdir)"
+install : recurse $(OBJS) $(LIB_LIB) $(addprefix install,$(TARGETS))
 else
 # used in subdirs like libc/ctype whose files
 # are contained in a parent's library
